--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^1.3.0
+  flutter_launcher_icons: ^0.9.0
+  
+
+flutter_icons:
+  android: "ic_launcher"
+  ios: false
+  image_path: "assets/images/stock.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
